Fixed algorithm for heatmap. needs testing.